syntax = "proto3";

package cheers.chat.v1;

import "google/protobuf/timestamp.proto";
import "cheers/type/user/user.proto";

option java_multiple_files = true;
option go_package = "github.com/salazarhugo/cheers1/genproto/cheers/chat/v1;chat";

message ChatEvent {
  string sender_id = 1;
  string room_id = 2;
}